refactor(Member): 합격자 멤버 생성 공통 로직 메소드로 분리